--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="main.jpg" alt="">
+            <img src="main.png" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Piyush</span></h1>
