--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="https://x.com/bpiyushInfoSec" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.instagram.com/bachinapiyush_007/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1gECwYn0-R24_VwYUPH4kpqBmCe1Z8S48/view?usp=sharing" class="btn" target="_blank">Hire me</a>
+            <a href="https://drive.google.com/file/d/1gECwYn0-R24_VwYUPH4kpqBmCe1Z8S48/view?usp=sharing" class="btn" target="_blank">Resume</a>
         </div>
     </section>
 </body>
